# programing_repo

./: README.md
CPP/: 1.10)_2.cpp  1.11).cpp  1.2).cpp  1.9).cpp  4_11_23.cpp  7_11_23.cpp  CM304_10_Nome e idade.cpp  CM305_10_Calculadora-simples 1.cpp  CM306_10_Calcular-média.cpp  CM308_10_Variável-temporária.cpp  CM309_10_Operadores lógicos.cpp  CM310_10_if_else-if_else.cpp  CM311_10_switch_case_break_default.cpp  CM312_10_for_.cpp  CM315_10_Funções_.cpp  CM316_10_Arrays-Strings_.cpp  TP rodrigo.cpp  Trabalho_pratico_17_11_2023 - Cópia.cpp  Trabalho_pratico_17_11_2023.cpp  Trabalho_pratico_17_11_2023_3.cpp  Untitled1.cpp  Untitled2.cpp  agendaTrabalho2.cpp  agendaTrabalho_MateusFeliciano.cpp  agendaTrabalho_MateusFeliciano_Kyryl - Cópia.cpp  agenda_base.cpp  aleatorio.cpp  aula_16_02_2024_2.cpp  ex01.cpp  ex03.cpp  funcaoTroca.cpp  jogodogalo1.cpp  listaLigada_basico.cpp  numeroescondido_basic_mateus_feliciano_n10_t_10_d_e.cpp  numeroescondido_expert.cpp  prob1.cpp  testes.cpp
Mateus/CPP/: 1.1).cpp  1.10).cpp  1.12).cpp  1.13).cpp  1.4).cpp  1.5).cpp  1.6).cpp  1.7).cpp  1.8).cpp  10_11_23.cpp  14_11_23.cpp  15_11_23.cpp  CM307_10_Constante-PI.cpp  CM313_10_while_.cpp  CM314_10_do-while_switch_break_.cpp  CM315_10_Funções_ v4.cpp  CM316_10_Arrays-Strings_.cpp  CM317_10Classes-POO_Exercício2.cpp  CM318_10_Classes-POO_Exercício2A_.cpp  CM319_10_Classes-POO_Exercício_Retangulo_.cpp  CMakeLists.txt  Trabalho_pratico_17_11_2023_2.cpp  Untitled3.cpp  agendaTrabalho_MateusFeliciano (1).cpp  agendaTrabalho_MateusFeliciano_Kyryl.cpp  aula_16_02_2024.cpp  completo.cpp  ex02.cpp  exemploPonteiro.cpp  exemploSizeof.cpp  jogodogalo2.cpp  kyril.cpp  lista_01.cpp  numeroescondido_basic.cpp  numeroescondido_expert_mateus_feliciano_n10_t_10_d_e.cpp  programaBase.cpp  voids.cpp
Mateus/CPP/GS1_WIN/: compileAll_x64.bat  compileAll_x86.bat  config.h  config_dpmm.h  gen.py  gs1_Win_Pallet.cpp  gs1_Win_Products.cpp
Mateus/CPP/GS1_WIN/csv/: labels_Pallet.csv  labels_Pallet.xlsx  labels_Pallet_Boxes.csv  labels_Pallet_Boxes.xlsx  labels_Products.csv  labels_Products.xlsx
PHP/: 2_2.php  3.php  HEHE.php  NONO.php  aoaoa.php  exercicio3_tecinf_mateusfeliciano_n10_t10D.php  inv.php  lidl.php  ola.php  teste.php  teste1_1.php
PYTHON/: Ficha -Dashboard.docx  Ficha_10_ex11.py  Ficha_1_ex2.py  Ficha_1_ex3.py  Ficha_2_ex1.py  Ficha_2_ex2.py  Ficha_2_ex3.py  Ficha_2_ex4.py  Ficha_2_ex7.py  Ficha_3_ex1.py  Ficha_3_ex3.py  Ficha_4_ex3.py  Ficha_5_ex4.py  Ficha_6_ex3.py  Ficha_6_ex5.py  Ficha_7_ex3.py  supermercado_vendas.xlsx  tst.py
SQL/: aula_clientes.sql  distinct.sql  insert.sql  (+12 more)
(+277 files in other folders)
